Issue #28 by Zarabadoo: Clean up spacing on small screens.

--- a/docroot/sites/all/themes/drupal4ok/stylesheets/css/screen.css
+++ b/docroot/sites/all/themes/drupal4ok/stylesheets/css/screen.css
@@ -453,7 +453,7 @@ input[type="button"] {
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  background: #dddddd url('../../images/button.png?1360880560') repeat-x;
+  background: #dddddd url('../../images/button.png?1369207369') repeat-x;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
   background-image: -webkit-linear-gradient(#ffffff, #dddddd);
   background-image: -moz-linear-gradient(#ffffff, #dddddd);
@@ -687,7 +687,7 @@ optgroup::-moz-focus-inner {
 .ie6_button,
 * html button,
 * html a.button {
-  background: #dddddd url('../../images/button.png?1360880560') repeat-x;
+  background: #dddddd url('../../images/button.png?1369207369') repeat-x;
   border: 1px solid;
   border-color: #dddddd #bbbbbb #999999;
   cursor: pointer;
@@ -866,7 +866,17 @@ optgroup::-moz-focus-inner {
   }
 }
 
+#header,
+.breadcrumb {
+  padding: 0.5em;
+}
+
+#content {
+  padding: 0.5em;
+}
+
 #footer {
+  padding: 0.5em;
   background-color: #282624;
   color: white;
   text-align: center;
@@ -980,7 +990,7 @@ input[type="button"] {
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  background: #dddddd url('../../images/button.png?1360880560') repeat-x;
+  background: #dddddd url('../../images/button.png?1369207369') repeat-x;
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #dddddd));
   background-image: -webkit-linear-gradient(#ffffff, #dddddd);
   background-image: -moz-linear-gradient(#ffffff, #dddddd);
@@ -1214,7 +1224,7 @@ optgroup::-moz-focus-inner {
 .ie6_button,
 * html button,
 * html a.button {
-  background: #dddddd url('../../images/button.png?1360880560') repeat-x;
+  background: #dddddd url('../../images/button.png?1369207369') repeat-x;
   border: 1px solid;
   border-color: #dddddd #bbbbbb #999999;
   cursor: pointer;
@@ -1269,8 +1279,16 @@ body, html {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
+body {
+  background: #dedede;
+}
+
 h1, h2, h3, h4, h5 {
   font-weight: bold;
+}
+
+table {
+  width: 100%;
 }
 
 td {
@@ -1280,4 +1298,5 @@ td {
 #page-wrapper {
   max-width: 40em;
   margin: auto;
+  background: #fff;
 }
